search, added classes and fixed count

--- a/webdesign/test6_search/search.css
+++ b/webdesign/test6_search/search.css
@@ -1,20 +1,48 @@
 #main {
+
 	width: 100%;
-}
-nav {
-	display: inline-block;
-	position: fixed;
-	/*float: left;
-	/*right: 75%;
-	left: auto;*/
-	width: 20%;
-	margin-top: 13%;
+
 }
 
-#content {
+nav {
+
 	display: inline-block;
+
+	position: fixed;
+
+	/*float: left;
+
+	/*right: 75%;
+
+	left: auto;*/
+
+	width: 20%;
+
+	margin-top: 13%;
+
+}
+
+
+
+#content {
+
+	display: inline-block;
+
 	margin-left: 23%;
+
 	/*position: relative;
+
 	float: right;*/
+
 	width: 40%;
+
+}
+
+
+.search-found {
+
+}
+
+.search-notfound {
+	color: #eee;
 }
