--- a/webdesign/ongoing prototype/css/style-lambda.css
+++ b/webdesign/ongoing prototype/css/style-lambda.css
@@ -26,10 +26,6 @@
     font-family: Hkgrotesk;
     src: url('fonts/HKGrotesk-Regular.otf');
 }
-@font-face {
-    font-family: LeagueGothic;
-    src: url('fonts/LeagueGothic-Regular.otf');
-}
 
 
 body {
@@ -40,6 +36,7 @@ body {
     width: 100%;
     text-rendering: optimizeSpeed;
     position: relative;
+  background-color:#fafafa;
 }
 
 .main{
@@ -55,7 +52,7 @@ body {
 }
 
 a:hover{
-color:yellow;
+color:#ff521e;
 }
 
 
@@ -64,33 +61,31 @@ color:yellow;
 ************ FIXED BAR *************
 
 */
+.logoinc{
+    width: 200px;
+    height: auto;
+    background-color: none;
+    margin: 0;
+    margin-left: 4%;
+    box-shadow: none;
+    position: absolute;
+}
+
 .fixedbar{
     height:20px;
     width: 100%;
     position: fixed;
     font-size:40px;
     font-family: "Times";
+z-index: 9999999999;
 }
 
-.fixedbar .logo{
-    width: 100px;
-    height: auto;
-    background-color: none;
-    margin: 0;
-    box-shadow: none;
-}
+
 
 .fixedbar .title{
     float: right;
     position: relative;
-    /*font-family: "LeagueGothic";
-    text-transform: uppercase;*/
-    font-size: 17px;
-    line-height: 0.9em;
-    max-width: 20%;
-    color: black;
-    z-index: -99999;
-    font-family: "Hkgrotesk";
+    color:#3e3e3e;
 }
 
 /*
@@ -99,19 +94,17 @@ color:yellow;
 */
 
 .cover-container{
-    position:absolute;left:0;top:0;width:100%;height:auto;z-index:-999;
 }
 #cover{
-margin:0;width:100%;
+margin:0;
 }
 
 #cover-shadow{
-    z-index: 99999999999990;
+    z-index: -990;
     position: absolute;
-    margin-top:400px;
+    margin-top:900px;
     left:-500px;top:0;width:160%;
 background-color: white;
-    height: 400px;
 }
 
 /*
@@ -130,10 +123,22 @@ background-color: white;
     font-size: 10px;
     background-color: white;
     width: 400px;
-    right:10px;
-    top:70px;
+    left:34%;
+    top:100px;
     padding: 10px;
-    border:1px solid black;
+    border:1px solid #3e3e3e;
+}
+
+.coverpicture{
+    border:1px solid #3e3e3e;
+    box-shadow: none;
+    width: 300px;
+    height: auto;
+    margin:0;
+    margin-top: 100px;
+    margin-left: 4%;   
+    padding: 20px;
+    background-color: white;
 }
 
 /*
@@ -144,19 +149,13 @@ background-color: white;
 /************* test ***************/
 
 .section {
-background: rgba(255,255,255,1);
-background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 10%, rgba(199,199,199,1) 40%, rgba(173,173,173,1) 50%, rgba(199,199,199,1) 60%, rgba(255,255,255,1) 90%, rgba(255,255,255,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(10%, rgba(255,255,255,1)), color-stop(40%, rgba(199,199,199,1)), color-stop(50%, rgba(173,173,173,1)), color-stop(60%, rgba(199,199,199,1)), color-stop(90%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,1)));
-background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 10%, rgba(199,199,199,1) 40%, rgba(173,173,173,1) 50%, rgba(199,199,199,1) 60%, rgba(255,255,255,1) 90%, rgba(255,255,255,1) 100%);
-background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 10%, rgba(199,199,199,1) 40%, rgba(173,173,173,1) 50%, rgba(199,199,199,1) 60%, rgba(255,255,255,1) 90%, rgba(255,255,255,1) 100%);
-background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 10%, rgba(199,199,199,1) 40%, rgba(173,173,173,1) 50%, rgba(199,199,199,1) 60%, rgba(255,255,255,1) 90%, rgba(255,255,255,1) 100%);
-background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 10%, rgba(199,199,199,1) 40%, rgba(173,173,173,1) 50%, rgba(199,199,199,1) 60%, rgba(255,255,255,1) 90%, rgba(255,255,255,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0 );
     width: 100%;
     margin:0;
+    background-color: #fafafa;
+    color:#3e3e3e;
 }
 .section ul{
-    color:black;
+    color:#3e3e3e;
 }
 .section current{
         width: 100%;
@@ -196,7 +195,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     margin-right: 15%;*/
     font-size: 1.2em;
     line-height: 1.6em;
-color:#1a1a1a;
+color:#3e3e3e;
 }
 .content-pushed{
    /* width: 60%; 
@@ -208,10 +207,6 @@ color:#1a1a1a;
 a{
     color: inherit;
 }
-
-.keyword{
-    text-shadow: 2px 3px 20px black;
-}
 .section h2{
     margin-top: 160px;
     margin-left: 5%;
@@ -220,7 +215,6 @@ a{
     padding-top: 10px;
     max-width: 600px;
   /*  font-family: "Umemincho"; */
-    font-family: "Times";
     font-size: 3em;
     line-height: 1em;
 /*
@@ -327,7 +321,6 @@ text-indent: 20px;
   -webkit-hyphens: auto;
   hyphens: auto;
     font-family: "Verdana";
-    z-index: 9999999;
 }
 
 /************* SEARCH BOX ***************/
@@ -353,21 +346,17 @@ fieldset{
 
 
 #filter-count{
-    color: black;
-    font-size: 12px;
-    font-family: "Hkgrotesk";
-    text-align: justify;
+   color: #3e3e3e;
 }
 #filter.text-input{
 }
 input#filter{   
 }
 input{
-    border:1px solid black;
+    border:1px solid #3e3e3e;
 }
 input:hover{
-    border:1px solid;
-    border-color:yellow;
+    border:1px solid #ff3300;
 }
 
 .search-found {
@@ -450,7 +439,7 @@ input:hover{
 font-weight: normal;
 /* border-width:1px;
  border-style:solid;
- border-color:black;
+ border-color:#3e3e3e;
     border-radius: 8px;*/
 }
 
@@ -462,7 +451,7 @@ font-weight: normal;
     min-width: 200px;
  /* border-width:1px;
     border-style:solid;
- border-color:black;
+ border-color:#3e3e3e;
     border-radius: 8px;*/
 font-weight: normal;
 
@@ -492,7 +481,7 @@ color:#ff3300;
 
 .pushmenu-left.pushmenu-open {
   left: 32px;  
-    border-right: solid 1px black;
+    border-right: solid 1px #3e3e3e;
 -webkit-box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 -moz-box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
@@ -532,9 +521,9 @@ vertical-align:middle;
   display:inline-block;
   line-height:normal;
   text-align:left;
-    background-color:rgba(255, 255, 255, 0.2);
-    color: black;
-    border: solid 1px black;
+    background-color:white;
+    color: #3e3e3e;
+    border: solid 0px #3e3e3e;
     border-top: none;
     padding: 5Px;
     /* box-shadow: 0px -3px 15px 8px white;
@@ -543,8 +532,8 @@ vertical-align:middle;
 }
 
 #nav_list:hover{
-    color: yellow;
-    border: 1px solid yellow;
+    color: white;
+    background-color: #ff3300;
 }
 
 .close{
@@ -555,7 +544,7 @@ vertical-align:middle;
   display:inline-block;
   line-height:normal;
   text-align:left;
-    background-color: mediumblue; 
+    background-color:#ff3300; 
     position: fixed;
 }
 nav-list.active {
@@ -578,7 +567,6 @@ nav-list.active {
     width: 100%;
     height: 400px;
     position: relative;
-    background-color: white;
     z-index: -99999999;
 }
 #footer{
