--- a/webdesign/ongoing prototype/css/style.css
+++ b/webdesign/ongoing prototype/css/style.css
@@ -27,6 +27,10 @@
     src: url('fonts/HKGrotesk-Regular.otf');
 }
 @font-face {
+    font-family: HkgroteskBold;
+    src: url('fonts/HKGrotesk-Bold.otf');
+}
+@font-face {
     font-family: LeagueGothic;
     src: url('fonts/LeagueGothic-Regular.otf');
 }
@@ -106,12 +110,12 @@ margin:0;width:100%;
 }
 
 #cover-shadow{
-    z-index: 99999999999990;
+  /*  z-index: 99999999999990;
     position: absolute;
     margin-top:400px;
     left:-500px;top:0;width:160%;
 background-color: white;
-    height: 400px;
+    height: 400px; */
 }
 
 /*
@@ -140,7 +144,9 @@ background-color: white;
 
 /************* READER ***************/
 
-
+b{
+    font-family: "HkgroteskBold";
+}
 /************* test ***************/
 
 .section {
@@ -210,7 +216,16 @@ a{
 }
 
 .keyword{
-    text-shadow: 2px 3px 20px black;
+ /*   text-shadow: 2px 3px 20px black; */
+    background-color: yellow;
+    cursor: pointer;
+    font-style: normal;
+}
+.keyword:hover{
+    color: black;
+    margin-left:1px;
+    margin-top: 3px;
+    font-style: italic;
 }
 .section h2{
     margin-top: 160px;
@@ -218,7 +233,7 @@ a{
     margin-bottom: 30px;
     padding-right: -40px;
     padding-top: 10px;
-    max-width: 600px;
+    max-width: 700px;
   /*  font-family: "Umemincho"; */
     font-family: "Times";
     font-size: 3em;
@@ -288,7 +303,12 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=#e6e6e6, Direction=134, St
    margin-top: 600px;
    /* padding: 0px 35px 0px 35px;*/
 }
-
+.about_authors{
+    background-color: gray;
+    width: 400px;
+    height: 200px;
+    border-radius: 20px;
+}
 /************* REFERENCE LISTS ***************/
 #reference-list, #reference-list-1, #reference-list-2, #reference-list-3, #reference-list-4, #reference-list-5, #reference-list-6, #reference-list-7, #reference-list-8, #reference-list-9, #reference-list-10{
     font-family: "Verdana";
@@ -392,7 +412,7 @@ input:hover{
 
 /************* MENU ***************/
 .pushmenu { /* this is the nav that is hidden */
-  width: 270px;
+  width: 700px;
   height: 100%;
   top: 0;
   position:fixed;
@@ -404,8 +424,29 @@ input:hover{
     margin-bottom: 20px;
 }
 #book-toc{
-    margin-left: 5px;
+    margin-left: 10px;
     margin-right: 5px;
+  /*  height: 400px;
+    border-bottom: 1px solid black;
+    overflow-y: scroll;*/
+}
+#book-downloads{
+    margin-top:10px;
+}
+#book-downloads, #social{
+    margin-bottom: 10px;
+    font-size: 14px;
+    margin-left: 10px;
+}
+.button{
+    background-color: #cecece;
+    border-radius: 5px;
+    padding:2px; 
+    cursor: pointer;
+}
+.button:hover{
+    margin-left:1px;
+    margin-top: 3px;
 }
 #credit{
     margin-top: 40px;
@@ -438,16 +479,14 @@ input:hover{
 }
 
 .pushmenu h2 { /* big part */
-  font-size: 1.2em;
-  padding: 5px 5px 0px 5px;
+    font-size: 1.1em;
     margin: 0;
+    margin-top:10px;
+    margin-right: 10px;
   height: auto;
-    -webkit-margin-before:0;
-    -webkit-margin-after: 2px;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;  
-        text-decoration: none;
+    text-decoration: none;
 font-weight: normal;
+    border:1px solid black;
 /* border-width:1px;
  border-style:solid;
  border-color:black;
@@ -455,16 +494,17 @@ font-weight: normal;
 }
 
 .pushmenu h3 { /* sub-part */
-  font-size: 0.7em;
-  padding: 0px 5px 5px 5px;
-  margin-bottom: 0px;
-    margin-left:20px;
-    min-width: 200px;
+  font-size: 0.9em;
+    margin:0;
+    margin-bottom: 2px;
+    padding:0;
+    margin-left:30px;
  /* border-width:1px;
     border-style:solid;
  border-color:black;
     border-radius: 8px;*/
 font-weight: normal;
+    width: auto;
 
 }
 
@@ -486,7 +526,7 @@ color:#ff3300;
 }
 
 .pushmenu-left {
-  left: -270px;
+  left: -700px;
     overflow-y:scroll;
 }
 
@@ -505,7 +545,7 @@ box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 .pushmenu-push-toright {
-  left: 270px;
+  left: 700px;
 }
 
 /*Transition*/
@@ -536,7 +576,6 @@ vertical-align:middle;
     color: black;
     border: solid 1px black;
     border-top: none;
-    padding: 5Px;
     /* box-shadow: 0px -3px 15px 8px white;
     -webkit-box-shadow: 0px -3px 15px 8px white;
     -moz-box-shadow: 0px -3px 15px 8px white;*/
@@ -713,7 +752,7 @@ background-image: url('image/cover.jpg');
     overflow-x: hidden;
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
+    width: 700px;
 }
 .content-pushed{
     width: 60%;
@@ -744,7 +783,7 @@ background-image: url('image/cover.jpg');
     overflow-x: hidden;
     margin-left: auto;
     margin-right: auto;
-    width: 750px;
+    width: 700px;
 }
 .content-pushed{
     width: 60%;
